minor layout bugs in homepage

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -243,7 +243,7 @@ button{
 }
 #topSearch{
    text-align: center;
-   margin-top: 40%;
+   margin-top: 60px;
    margin-bottom: 10%;
 }
 #home h1{
@@ -285,7 +285,7 @@ text-transform:uppercase;
 /* favs & recents */
 #hpTabs{
    position: absolute;
-   bottom:10%;
+   bottom:30px;
    left:0;
    width: 100%;
    height: 88px;
@@ -421,7 +421,7 @@ text-transform:uppercase;
 #hpTabs .btnClear{
    position: absolute;
    right: 4px;
-   top: 140px;
+   top: 130px;
    width:auto;
    display: none;
    color: #fff;
